day14幻灯片，暗黑模式的使用

--- a/src/assets/bootstrap/css/style.css
+++ b/src/assets/bootstrap/css/style.css
@@ -227,9 +227,14 @@ input {
 .navbar-custom {
   background: transparent; }
 
+:root{
+  --bg-color: #fff;
+  --lg-color: black;
+}
+
 a.navbar-brand, a.logo {
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #444342 !important;
+  color: var(--lg-color);
   font-size: 2rem;
   font-weight: bold;
   margin-top: 0; }
@@ -246,7 +251,7 @@ li.nav-item .active {
   font-weight: bold; }
 
 .header {
-  background: #fff;
+  background: var(--bg-color);
   min-height: 7em;
   height: auto;
   border-radius: 0;
